--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,6 +1,10 @@
-<h1>{{ user }}'s Profile</h1>
+{% extends "layout.html" %}
 
-<h3>주문내역</h3>
+{% block content %}
+    <h1>{{ user }}'s Profile</h1>
 
-...
+    <h3>주문내역</h3>
+
+    ...
+{% endblock %}
 
