--- a/askdjango/templates/layout.html
+++ b/askdjango/templates/layout.html
@@ -25,7 +25,7 @@
 					<a class="nav-link disabled" href="#">Disabled</a>
 				</li>
 			</ul>
-			<form class="form-inline my-2 my-lg-0" action="#" method="get">
+            <form class="form-inline my-2 my-lg-0" action="{% url "shop:index" %}" method="get">
 				<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="q" value="{{ q }}" />
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 			</form>
