--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,10 +1,26 @@
 {% extends "layout.html" %}
+{% load humanize %}
 
 {% block content %}
     <h1>{{ user }}'s Profile</h1>
 
     <h3>주문내역</h3>
 
-    ...
+    <table class="table table-hover table-bordered">
+        <thead>
+            <tr>
+                <th>상품명</th>
+                <th>결제가격</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for order in order_list %}
+                <tr>
+                    <td>{{ order.name }}</td>
+                    <td class="text-right">{{ order.amount|intcomma }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
 
