--- a/askdjango/templates/layout.html
+++ b/askdjango/templates/layout.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">AskDjango 쇼핑몰</a>
+        <a class="navbar-brand" href="{% url "shop:index" %}">AskDjango 쇼핑몰</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
